--- a/pages/js/vue/duster/src/assets/themes/stanford/_fonts.scss
+++ b/pages/js/vue/duster/src/assets/themes/stanford/_fonts.scss
@@ -3,17 +3,16 @@
     font-family: 'Source Sans Pro';
     font-style: normal;
     font-weight: 400;
-    src: url("~@/assets/fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf") format("truetype");
+    src: url("../../../assets/fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf") format("truetype");
   }
   @font-face {
     font-family: 'Source Sans Pro';
     font-style: italic;
     font-weight: 400;
-    src: url("~@/assets/fonts/Source_Sans_Pro/SourceSansPro-Italic.ttf") format("truetype");
+    src: url("../../../assets/fonts/Source_Sans_Pro/SourceSansPro-Italic.ttf") format("truetype");
   }
   @font-face {
     font-family: 'Source Sans Pro';
     font-weight: 700;
-    src: url("~@/assets/fonts/Source_Sans_Pro/SourceSansPro-Bold.ttf") format("truetype");
+    src: url("../../../assets/fonts/Source_Sans_Pro/SourceSansPro-Bold.ttf") format("truetype");
   }
-  
