--- a/pages/js/vue/duster/src/assets/themes/stanford/variables/_button.scss
+++ b/pages/js/vue/duster/src/assets/themes/stanford/variables/_button.scss
@@ -4,7 +4,9 @@ $buttonPadding: .5rem 1rem;
 
 /// Width of a button having an icon with no label
 /// @group button
-$buttonIconOnlyWidth: 2.357rem;
+//$buttonIconOnlyWidth: 2.357rem;
+// STANFORD
+$buttonIconOnlyWidth: 1.75rem;
 
 /// Padding of a button having an icon with no label
 /// @group button
