--- a/pages/js/duster/shared/src/assets/themes/stanford/variables/_message.scss
+++ b/pages/js/duster/shared/src/assets/themes/stanford/variables/_message.scss
@@ -80,23 +80,23 @@ $toastDetailMargin: $inlineSpacing 0 0 0;
 
 /// Background of an info message
 /// @group message
-$infoMessageBg: #039BE5;
+$infoMessageBg: rgba(219, 234, 254, 0.7);
 
 /// Border of an info message
 /// @group message
-$infoMessageBorder: solid #027cb7;
+$infoMessageBorder: solid #3b82f6;
 
 /// Text color of an info message
 /// @group message
-$infoMessageTextColor: #ffffff;
+$infoMessageTextColor: #3b82f6;
 
 /// Icon color of an info message
 /// @group message
-$infoMessageIconColor: #ffffff;
+$infoMessageIconColor: #3b82f6;
 
 /// Background of a success message
 /// @group message
-$successMessageBg: #43A047;
+$successMessageBg: rgba(228, 248, 240, 0.7);
 
 /// Border of a success message
 /// @group message
@@ -104,15 +104,15 @@ $successMessageBorder: 0 none;
 
 /// Text color of a success message
 /// @group message
-$successMessageTextColor: #ffffff;
+$successMessageTextColor: #1ea97c;
 
 /// Icon color of a success message
 /// @group message
-$successMessageIconColor: #ffffff;
+$successMessageIconColor: #1ea97c;
 
 /// Background of a warning message
 /// @group message
-$warningMessageBg: #FFB300;
+$warningMessageBg: rgba(255, 242, 226, 0.7);
 
 /// Border of a warning message
 /// @group message
@@ -120,15 +120,15 @@ $warningMessageBorder: 0 none;
 
 /// Text color of a warning message
 /// @group message
-$warningMessageTextColor: $textColor;
+$warningMessageTextColor: #cc8925;
 
 /// Icon color of a warning message
 /// @group message
-$warningMessageIconColor: $textColor;
+$warningMessageIconColor: #cc8925;
 
 /// Background of an error message
 /// @group message
-$errorMessageBg: #E53935;
+$errorMessageBg: rgba(255, 231, 230, 0.7);
 
 /// Border of an error message
 /// @group message
@@ -136,8 +136,8 @@ $errorMessageBorder: 0 none;
 
 /// Text color of an error message
 /// @group message
-$errorMessageTextColor: #ffffff;
+$errorMessageTextColor: #ff5757;
 
 /// Icon color of an error message
 /// @group message
-$errorMessageIconColor: #ffffff;
+$errorMessageIconColor: #ff5757;
